--- a/app/public/index.html
+++ b/app/public/index.html
@@ -76,11 +76,11 @@
     </div>
 
     <!-- FOOTER -->
-    <div class="container footer">
+    <div class="container footer display-none">
       <div class="row">
         <div class="col-md-6"></div>
         <div class="col-md-3">
-            <div class="bs-callout bs-callout-info display-none">
+            <div class="bs-callout bs-callout-info">
               <h4><img src="./res/Jersey_white.svg.png" class="jersey" /> Random Stat</h4>
               <h5>Fastest Rider? - <small id="fastestRider"></small></h5>
             </div>
