add links in rules

--- a/app/public/rules.html
+++ b/app/public/rules.html
@@ -32,10 +32,10 @@
                 <ul>
                     <li>Total time on the following climbs:
                         <ul>
-                            <li>Four Corners (Category 3)</li>
-                            <li>Hawk Hill (Category 4)</li>
-                            <li>Camino Alto (Category 3)</li>
-                            <li>Pantole (Category 3)</li>
+                            <li><a href="https://www.strava.com/segments/1173191">Four Corners</a> (Category 3)</li>
+                            <li><a href="https://www.strava.com/segments/229781">Hawk Hill</a> (Category 4)</li>
+                            <li><a href="https://www.strava.com/segments/4783121">Camino Alto</a> (Category 3)</li>
+                            <li><a href="https://www.strava.com/segments/6366843">Pantoll</a> (Category 3)</li>
                         </ul>
                     </li>
                     <li>If you haven't done one of these Climbs you're not eligable for the Polka Dot.</li>
