simplify client js, move to app side

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -26,6 +26,7 @@
                 <th>Rider</th>
                 <th></th>
                 <th>Total miles</th>
+                <th>Points</th>
                 <th>Gap</th>
               </tr>
             </thead>
@@ -40,6 +41,7 @@
                 <th>Rank</th>
                 <th>Rider</th>
                 <th>Elev Gain</th>
+                <th>Time</th>
               </tr>
             </thead>
             <tbody></tbody>
