--- a/app/public/rules.html
+++ b/app/public/rules.html
@@ -15,11 +15,16 @@
       <h1><img src="https://dgalywyr863hv.cloudfront.net/pictures/clubs/197635/4257457/2/medium.jpg" /> Radius Cycling <small>Top riders of the year!</small></h1>
     </div>
 
+    <div class="row">
+      <div class="col-md-3">&nbsp;</div>
+      <div class="col-md-6"><div class="rules-bg">&nbsp;</div></div>
+      <div class="col-md-3">&nbsp;</div>
+    </div>
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-3">&nbsp;</div>
         <div class="col-md-6">
-            <div class="rules-bg"></div>
             <div class="rules">
                 <h2>Radius Cycling Team &quot;rules&quot;</h2>
                 <h3><img src="./res/Jersey_yellow.svg.png" class="jersey" /> General Classification</h3>
