filter leaderboard by current year

--- a/app/public/rules.html
+++ b/app/public/rules.html
@@ -49,10 +49,12 @@
                 <ul>
                     <li>Polo Field Lap (1 KM, 0.66mi)</li>
                     <li>No drafting</li>
+                    <li>Only PRs of the current year</li>
                 </ul>
                 <h3><img src="./res/Jersey_blue.svg.png" class="jersey" /> Radius Jersey</h3>
                 <ul>
                     <li>Hawk Hill, Hawk Hill, Hawk Hill</li>
+                    <li>Only PRs of the current year</li>
                 </ul>
             </div>
         </div>
