--- a/app/public/index.html
+++ b/app/public/index.html
@@ -26,7 +26,7 @@
                 <th>Rider</th>
                 <th></th>
                 <th>Total miles</th>
-                <!-- <th>Points</th> -->
+                <th>Points</th>
                 <th>Gap</th>
               </tr>
             </thead>
