use new polka times leaderboard

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -41,7 +41,7 @@
                 <th>Rank</th>
                 <th>Rider</th>
                 <th>Elev Gain</th>
-                <!-- <th>Time</th> -->
+                <th>Time</th>
               </tr>
             </thead>
             <tbody></tbody>
