--- a/app/public/index.html
+++ b/app/public/index.html
@@ -13,7 +13,7 @@
     <div id="background"></div>
     <div class="page-header">
       <h1><img src="https://dgalywyr863hv.cloudfront.net/pictures/clubs/197635/4257457/2/medium.jpg" /> Radius Cycling <small>Top riders of the year!</small></h1>
-      <div><img src="./res/api_logo_pwrdBy_strava_stack_light.png" /></div>
+      <!-- <div><img src="./res/api_logo_pwrdBy_strava_stack_light.png" /></div> -->
     </div>
 
     <div class="container-fluid">
