--- a/app/public/rules.html
+++ b/app/public/rules.html
@@ -4,6 +4,7 @@
     <title>Radius Cycling Leaderboard</title>
     <meta name="author" content="Jelle Vanhorenbeke">
     <meta name="description" content="Radius Cycling Leaderboard">
+    <meta http-equiv="refresh" content="300">
     <link rel="shortcut icon" type="image/x-icon" href="./res/favicon.ico">
     <link rel="stylesheet" type="text/css" media="all" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css" />
     <link rel="stylesheet" type="text/css" media="all" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
