--- a/app/public/index.html
+++ b/app/public/index.html
@@ -12,9 +12,19 @@
   </head>
   <body>
     <div id="background"></div>
-    <div class="page-header">
-      <h1><img src="https://dgalywyr863hv.cloudfront.net/pictures/clubs/197635/4257457/2/medium.jpg" /> Radius Cycling <small>Top riders of the year!</small></h1>
-      <!-- <div><img src="./res/api_logo_pwrdBy_strava_stack_light.png" /></div> -->
+    <div class="row board-header">
+        <div class="float-left"><h1><img src="https://dgalywyr863hv.cloudfront.net/pictures/clubs/197635/4257457/2/medium.jpg" /> Radius Cycling</h1></div>
+        <div class="float-left">
+            <ul class="nav nav-pills">
+                <li role="presentation" class="disabled"><a href="#">Dashboard</a></li>
+                <li role="presentation"><a href="./rules">Rules</a></li>
+            </ul>
+        </div>
+    <!--
+      <div class="float-right">
+          <img class="strava" src="./res/api_logo_pwrdBy_strava_stack_light.png" />
+      </div>
+    -->
     </div>
 
     <div class="container-fluid">
