--- a/app/public/rules.html
+++ b/app/public/rules.html
@@ -20,11 +20,16 @@
                 <li role="presentation" class="disabled"><a href="#">Rules</a></li>
             </ul>
         </div>
-    <!--
-      <div class="float-right">
+        <div class="float-right">
           <img class="strava" src="./res/api_logo_pwrdBy_strava_stack_light.png" />
-      </div>
-    -->
+        </div>
+
+    </div>
+
+    <div class="row">
+      <div class="col-md-3">&nbsp;</div>
+      <div class="col-md-6"><div class="rules-bg">&nbsp;</div></div>
+      <div class="col-md-3">&nbsp;</div>
     </div>
 
     <div class="container-fluid">
