add polo field segment link

--- a/app/public/rules.html
+++ b/app/public/rules.html
@@ -58,7 +58,7 @@
                 </ul>
                 <h3><img src="./res/Jersey_green.svg.png" class="jersey" /> Sprinter Jersey</h3>
                 <ul>
-                    <li>Polo Field Lap (1 KM, 0.66mi)</li>
+                    <li><a href="https://www.strava.com/segments/432873">Polo Field Lap</a> (1 KM, 0.66mi)</li>
                     <li>No drafting</li>
                     <li>Only PRs of the current year</li>
                 </ul>
