--- a/app/public/rules.html
+++ b/app/public/rules.html
@@ -51,7 +51,8 @@
                             <li><a href="https://www.strava.com/segments/1173191">Four Corners</a> (Category 3)</li>
                             <li><a href="https://www.strava.com/segments/229781">Hawk Hill</a> (Category 4)</li>
                             <li><a href="https://www.strava.com/segments/4783121">Camino Alto</a> (Category 3)</li>
-                            <li><a href="https://www.strava.com/segments/6366843">Pantoll</a> (Category 3)</li>
+                            <!-- <li><a href="https://www.strava.com/segments/6366843">Pantoll</a> (Category 3)</li> -->
+                            <li><a href="https://www.strava.com/segments/939162">Pantol climb to West Peak</a> (Category 2)</li>
                         </ul>
                     </li>
                     <li>If you haven't done one of these Climbs you're not eligable for the Polka Dot.</li>
