pantoll as only segment for polka jersey

--- a/app/public/rules.html
+++ b/app/public/rules.html
@@ -48,11 +48,11 @@
                 <ul>
                     <li>Total time on the following climbs:
                         <ul>
-                            <li><a href="https://www.strava.com/segments/1173191">Four Corners</a> (Category 3)</li>
-                            <li><a href="https://www.strava.com/segments/229781">Hawk Hill</a> (Category 4)</li>
-                            <li><a href="https://www.strava.com/segments/4783121">Camino Alto</a> (Category 3)</li>
+                            <!-- <li><a href="https://www.strava.com/segments/1173191">Four Corners</a> (Category 3)</li> -->
+                            <li><a href="https://www.strava.com/segments/626859">Stinson to Pantoll</a> (Category 2)</li>
+                            <!-- <li><a href="https://www.strava.com/segments/4783121">Camino Alto</a> (Category 3)</li> -->
                             <!-- <li><a href="https://www.strava.com/segments/6366843">Pantoll</a> (Category 3)</li> -->
-                            <li><a href="https://www.strava.com/segments/939162">Pantol climb to West Peak</a> (Category 2)</li>
+                            <!-- <li><a href="https://www.strava.com/segments/939162">Pantol climb to West Peak</a> (Category 2)</li> -->
                         </ul>
                     </li>
                     <li>If you haven't done one of these Climbs you're not eligable for the Polka Dot.</li>
@@ -65,7 +65,7 @@
                 </ul>
                 <h3><img src="./res/Jersey_blue.svg.png" class="jersey" /> Radius Jersey</h3>
                 <ul>
-                    <li>Hawk Hill, Hawk Hill, Hawk Hill</li>
+                    <li><a href="https://www.strava.com/segments/229781">Hawk Hill, Hawk Hill, Hawk Hill</a></li>
                     <li>Only PRs of the current year</li>
                 </ul>
             </div>
