use polka with segment call

--- a/app/public/new.html
+++ b/app/public/new.html
@@ -23,7 +23,6 @@
         <div class="float-right">
           <img class="strava" src="./res/api_logo_pwrdBy_strava_stack_light.png" />
         </div>
-
     </div>
 
     <div class="container-fluid">
@@ -40,45 +39,35 @@
         <div class="col-md-6">
             <div class="rules">
                 <h2>Create new dashboard</h2>
-                <h3>Select your club</h3>
-                <select class="form-control">
-                    <option>Radius</option>
-                    <option>Golden Gate Triathlon Club</option>
-                    <option>M2 Revolution</option>
-                    <option>San Francisco Running Company</option>
-                </select>
+                <h3><img src="./res/Jersey_yellow.svg.png" class="jersey" /> General Classification</h3>
+                <ul>
+                    <li>Total Milleage</li>
+                </ul>
 
                 <h3><img src="./res/Jersey_yellow.svg.png" class="jersey" /> General Classification</h3>
-                <select class="form-control">
-                    <option>Radius</option>
-                    <option>Golden Gate Triathlon Club</option>
-                    <option>M2 Revolution</option>
-                    <option>San Francisco Running Company</option>
-                </select>
+                <ul>
+                    <li>Total Time</li>
+                </ul>
 
                 <h3><img src="./res/Jersey_polkadot.svg.png" class="jersey" /> Climber Jersey</h3>
-                <select class="form-control">
-                    <option>Radius</option>
-                    <option>Golden Gate Triathlon Club</option>
-                    <option>M2 Revolution</option>
-                    <option>San Francisco Running Company</option>
-                </select>
+                <ul>
+                    <li>Gained elevation</li>
+                </ul>
+
+                <h3><img src="./res/Jersey_polkadot.svg.png" class="jersey" /> Climber Jersey</h3>
+                <ul>
+                    <li>Based on segment</li>
+                </ul>
 
                 <h3><img src="./res/Jersey_green.svg.png" class="jersey" /> Sprinter Jersey</h3>
-                <select class="form-control">
-                    <option>Radius</option>
-                    <option>Golden Gate Triathlon Club</option>
-                    <option>M2 Revolution</option>
-                    <option>San Francisco Running Company</option>
-                </select>
+                <ul>
+                    <li>Based on segment</li>
+                </ul>
 
                 <h3><img src="./res/Jersey_blue.svg.png" class="jersey" /> Radius Jersey</h3>
-                <select class="form-control">
-                    <option>Radius</option>
-                    <option>Golden Gate Triathlon Club</option>
-                    <option>M2 Revolution</option>
-                    <option>San Francisco Running Company</option>
-                </select>
+                <ul>
+                    <li>Based on segment</li>
+                </ul>
             </div>
         </div>
         <div class="col-md-3"></div>
