clean up, add bigger jerseys

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -20,17 +20,17 @@
                 <li role="presentation"><a href="./rules">Rules</a></li>
             </ul>
         </div>
-    <!--
+    
       <div class="float-right">
           <img class="strava" src="./res/api_logo_pwrdBy_strava_stack_light.png" />
       </div>
-    -->
+
     </div>
 
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-4">
-          <h2>Overall classification <small>Total mileage YTD</small></h2>
+          <h2>Overall classification <small>Total mileage</small></h2>
           <table class="table table-striped" id="yellowMaillot">
             <thead>
               <tr>
@@ -46,13 +46,13 @@
           </table>
         </div>
         <div class="col-md-3">
-          <h2>Climber Jersey <small>Total Elevation</small></h2>
+          <h2>Climber Jersey <small>Pantoll</small></h2>
           <table class="table table-striped" id="polkaMaillot">
             <thead>
               <tr>
                 <th>Rank</th>
                 <th>Rider</th>
-                <th>Elev Gain</th>
+                <th>Gap</th>
                 <th>Time</th>
               </tr>
             </thead>
