--- a/app/public/new.html
+++ b/app/public/new.html
@@ -39,35 +39,55 @@
         <div class="col-md-6">
             <div class="rules">
                 <h2>Create new dashboard</h2>
-                <h3><img src="./res/Jersey_yellow.svg.png" class="jersey" /> General Classification</h3>
-                <ul>
-                    <li>Total Milleage</li>
-                </ul>
 
-                <h3><img src="./res/Jersey_yellow.svg.png" class="jersey" /> General Classification</h3>
-                <ul>
-                    <li>Total Time</li>
-                </ul>
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="./res/Jersey_yellow.svg.png" class="jersey-xl" />
+                    </div>
+                    <div class="col-md-8">
+                        <h3>General Classification</h3>
+                        <ul>
+                            <li>Total Milleage</li>
+                        </ul>
+                    </div>
+                </div>
 
-                <h3><img src="./res/Jersey_polkadot.svg.png" class="jersey" /> Climber Jersey</h3>
-                <ul>
-                    <li>Gained elevation</li>
-                </ul>
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="./res/Jersey_polkadot.svg.png" class="jersey-xl" />
+                    </div>
+                    <div class="col-md-8">
+                        <h3>Climber Classification</h3>
+                        <ul>
+                            <li>Gained elevation</li>
+                        </ul>
+                    </div>
+                </div>
 
-                <h3><img src="./res/Jersey_polkadot.svg.png" class="jersey" /> Climber Jersey</h3>
-                <ul>
-                    <li>Based on segment</li>
-                </ul>
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="./res/Jersey_green.svg.png" class="jersey-xl" />
+                    </div>
+                    <div class="col-md-8">
+                        <h3>Sprinter Classification</h3>
+                        <ul>
+                            <li>Based on Segment</li>
+                        </ul>
+                    </div>
+                </div>
 
-                <h3><img src="./res/Jersey_green.svg.png" class="jersey" /> Sprinter Jersey</h3>
-                <ul>
-                    <li>Based on segment</li>
-                </ul>
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="./res/Jersey_blue.svg.png" class="jersey-xl" />
+                    </div>
+                    <div class="col-md-8">
+                        <h3>Custom Classification</h3>
+                        <ul>
+                            <li>Based on Segment</li>
+                        </ul>
+                    </div>
+                </div>
 
-                <h3><img src="./res/Jersey_blue.svg.png" class="jersey" /> Radius Jersey</h3>
-                <ul>
-                    <li>Based on segment</li>
-                </ul>
             </div>
         </div>
         <div class="col-md-3"></div>
