generalize ui code

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -20,11 +20,9 @@
                 <li role="presentation"><a href="./rules">Rules</a></li>
             </ul>
         </div>
-    
-      <div class="float-right">
+      <!-- <div class="float-right">
           <img class="strava" src="./res/api_logo_pwrdBy_strava_stack_light.png" />
-      </div>
-
+      </div> -->
     </div>
 
     <div class="container-fluid">
@@ -52,8 +50,8 @@
               <tr>
                 <th>Rank</th>
                 <th>Rider</th>
-                <th>Gap</th>
                 <th>Time</th>
+                <th>Gap</th>
               </tr>
             </thead>
             <tbody></tbody>
@@ -88,26 +86,6 @@
         </div>
       </div>
     </div>
-
-    <!-- FOOTER -->
-    <div class="container footer display-none">
-      <div class="row">
-        <div class="col-md-6"></div>
-        <div class="col-md-3">
-            <div class="bs-callout bs-callout-info">
-              <h4><img src="./res/Jersey_white.svg.png" class="jersey" /> Random Stat</h4>
-              <h5>Fastest Rider? - <small id="fastestRider"></small></h5>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="bs-callout bs-callout-info">
-              <h4><img src="./res/Jersey_rainbow.svg.png" class="jersey" /> Rainbow Jersey holder!</h4>
-              <div>Will be announced early 2017!</div>
-            </div>
-        </div>
-      </div>
-    </div>
-
     <!-- Javascript -->
     <!-- <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script> -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>
