--- a/app/public/new.html
+++ b/app/public/new.html
@@ -42,7 +42,7 @@
 
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="./res/Jersey_yellow.svg.png" class="jersey-xl" />
+                        <img src="./res/jersey/yellow.png" class="jersey-xl" />
                     </div>
                     <div class="col-md-8">
                         <h3>General Classification</h3>
@@ -54,7 +54,7 @@
 
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="./res/Jersey_polkadot.svg.png" class="jersey-xl" />
+                        <img src="./res/jersey/polkadot.png" class="jersey-xl" />
                     </div>
                     <div class="col-md-8">
                         <h3>Climber Classification</h3>
@@ -66,7 +66,7 @@
 
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="./res/Jersey_green.svg.png" class="jersey-xl" />
+                        <img src="./res/jersey/green.png" class="jersey-xl" />
                     </div>
                     <div class="col-md-8">
                         <h3>Sprinter Classification</h3>
@@ -78,7 +78,7 @@
 
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="./res/Jersey_blue.svg.png" class="jersey-xl" />
+                        <img src="./res/jersey/blue.png" class="jersey-xl" />
                     </div>
                     <div class="col-md-8">
                         <h3>Custom Classification</h3>
