--- a/app/public/index.html
+++ b/app/public/index.html
@@ -20,9 +20,9 @@
                 <li role="presentation"><a href="./rules">Rules</a></li>
             </ul>
         </div>
-      <!-- <div class="float-right">
+        <div class="float-right">
           <img class="strava" src="./res/api_logo_pwrdBy_strava_stack_light.png" />
-      </div> -->
+        </div>
     </div>
 
     <div class="container-fluid">
