--- a/app/public/rules.html
+++ b/app/public/rules.html
@@ -38,13 +38,13 @@
         <div class="col-md-6">
             <div class="rules">
                 <h2>Radius Cycling Team &quot;rules&quot;</h2>
-                <h3><img src="./res/Jersey_yellow.svg.png" class="jersey" /> General Classification</h3>
+                <h3><img src="./res/jersey/yellow.png" class="jersey" /> General Classification</h3>
                 <ul>
                     <li>It's all about your miles.</li>
                     <li>Commuter miles get filtered. Be nice, come on a ride with the team.</li>
                     <li>If you ride with a team member, your miles are worth x1.5.</li>
                 </ul>
-                <h3><img src="./res/Jersey_polkadot.svg.png" class="jersey" /> Climber Jersey</h3>
+                <h3><img src="./res/jersey/polkadot.png" class="jersey" /> Climber Jersey</h3>
                 <ul>
                     <li>Total time on the following climbs:
                         <ul>
@@ -57,13 +57,13 @@
                     </li>
                     <li>If you haven't done one of these Climbs you're not eligable for the Polka Dot.</li>
                 </ul>
-                <h3><img src="./res/Jersey_green.svg.png" class="jersey" /> Sprinter Jersey</h3>
+                <h3><img src="./res/jersey/green.png" class="jersey" /> Sprinter Jersey</h3>
                 <ul>
                     <li><a href="https://www.strava.com/segments/432873">Polo Field Lap</a> (1 KM, 0.66mi)</li>
                     <li>No drafting</li>
                     <li>Only PRs of the current year</li>
                 </ul>
-                <h3><img src="./res/Jersey_blue.svg.png" class="jersey" /> Radius Jersey</h3>
+                <h3><img src="./res/jersey/blue.png" class="jersey" /> Radius Jersey</h3>
                 <ul>
                     <li><a href="https://www.strava.com/segments/229781">Hawk Hill, Hawk Hill, Hawk Hill</a></li>
                     <li>Only PRs of the current year</li>
