--- a/app/public/index.html
+++ b/app/public/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="background"></div>
     <div class="row board-header">
-        <div class="float-left"><h1><img src="https://dgalywyr863hv.cloudfront.net/pictures/clubs/197635/4257457/2/medium.jpg" /> Radius Cycling</h1></div>
+        <div class="float-left" id="clubHeader"></div>
         <div class="float-left">
             <ul class="nav nav-pills">
                 <li role="presentation" class="disabled"><a href="#">Dashboard</a></li>
